--- a/Parcial 4/Parcial_4_.ipynb
+++ b/Parcial 4/Parcial_4_.ipynb
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "597c5c6b",
+   "id": "aaa1c5a0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "882a1b43",
+   "id": "bbd16ffb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e8ffe559",
+   "id": "6976b51b",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "51c93a2f",
+   "id": "0011fb88",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "51fc07a4",
+   "id": "3f8d9bfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb4ffa2f",
+   "id": "307affc6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a83b0625",
+   "id": "d23a40f1",
    "metadata": {
     "scrolled": true
    },
@@ -372,9 +372,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "181cff40",
+   "metadata": {},
+   "source": [
+    "Las variables si se correlacionan, debido a que se ve que los datos tienen una pendiente, es decir, su covaranza es distinta de cero, lo que implica que son codependientes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "87dfcd07",
+   "id": "f810005c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "564949d8",
+   "id": "a0622cf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "221ff923",
+   "id": "a91408ac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -405,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "af2f5923",
+   "id": "c5e24598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51a3407e",
+   "id": "ba2e444d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -441,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "ffa74a41",
+   "id": "37182876",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "6b72dc23",
+   "id": "c9fabd42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "0875b419",
+   "id": "181bba89",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "747bef0d",
+   "id": "da29d088",
    "metadata": {},
    "outputs": [
     {
@@ -554,8 +562,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "137b641f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 145,
-   "id": "0b6d34a2",
+   "id": "e437029b",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd603aa7",
+   "id": "d3f3e26c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -598,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d79d1c1a",
+   "id": "edd147a9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -606,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "b30a0112",
+   "id": "8f84f238",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "bab1dec3",
+   "id": "8b643d05",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b6e8863",
+   "id": "bf77aada",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -671,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bff69bc",
+   "id": "6856a148",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -679,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aa8c651",
+   "id": "e05d89ad",
    "metadata": {},
    "outputs": [],
    "source": []
